actually work in jdk > 8?